2010-10-19  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #16000: Move versioning selector to the version extension

2010-10-19  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL to version 1.2.0alpha3

2010-10-19  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16071: PHP Fatal error in t3lib_contextmenu_renderer_Abstract (Thanks to Stefan Kowalke)
	* Removal of unused and illegal files inside of codemirror library
	* Fixed bug #16055: BE debug mode should also enable debug mode for libraries

2010-10-19  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15095: The Web>Versioning view has style issues resulting in "wrong layers"
	* Fixed bug #13294: IRRE deleted combo records are still validated by TBE_EDITOR (Thanks to Marcel Greter)
	* Added feature #3613: additional wrap for FORM radio buttons

2010-10-18  Steffen Kamper  <steffen@typo3.org>

	* Added feature #16008: A new TypoScript cObject: FLUIDTEMPLATE
	* Added feature #16031: Feature - Implement new layout and labels for tt_content as result of T3UXW09 (Thanks to Jo Hasenau)
	* Fixed bug #16051: Palette render wrong and throw php warning if fieldset starts with palette
	* Added feature #16015: Feature - Implement new layout and labels for pages as result of T3UXW09 (Thanks to Jo Hasenau)
	* Added feature #16033: API for Trees and ContextMenus (Thanks to Stefan Galinski)

2010-10-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16047: htmlArea RTE: Add word count in the status bar
	* Fixed bug #16050: htmlArea RTE: Backspacing in empty editing area may raise js error
	* Updated htmlArea RTE version to 2.1.2

2010-10-18  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #15991: Style error messages in the TYPO3 way (Thanks to Lars Zimmermann, T3UXW09)
	* Added feature #16046: Improve ExtJS skin: Loading mask (Thanks to Lars Zimmermann)

2010-10-18  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #1318: 'removeTag' does not remove closing tags
