@@ -8,7 +8,8 @@
 
 2010-10-19  Steffen Kamper  <steffen@typo3.org>
 
-	* Fixed bug #16071: PHP Fatal error in t3lib_contextmenu_renderer_Abstract (Thanks to Stefan Kowalke)
+	* Fixed bug #16059: Use ExtJS Tooltips for CSH labels
+	* Fixed bug #16071: PHP Fatal error in t3lib_contextmenu_renderer_Abstract (Thanks to Stefano Kowalke)
 	* Removal of unused and illegal files inside of codemirror library
 	* Fixed bug #16055: BE debug mode should also enable debug mode for libraries
 
